--- a/.github/workflows/new_go.yml
+++ b/.github/workflows/new_go.yml
@@ -19,7 +19,7 @@ jobs:
         go-version: '1.20'
 
     - name: Build-DB
-      run: docker-copmpose build
+      run: docker-compose build
 
     - name: Create-DB
       run: docker-compose up -d
